fix wordwrap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -399,6 +399,7 @@ button:hover {
 	animation: none !important;
 }
 .recentBlogsHeader {
+	word-spacing: 100vw;
 	cursor: pointer;
 	font-size: 5rem;
 	margin: 0;
